// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`wxml > processWxml remove wxs > code 1`] = `
"<!-- index.wxml -->
<template name="staffName">
  <view>FirstName: {{firstName}}, LastName: {{lastName}}</view>
</template>
<navigation-bar></navigation-bar>
<image src="../../assets/logo.png" class="w-40 h-40"></image>
<image src="{{logoUrl}}" class="w-40 h-40"></image>
<ice-avatar></ice-avatar>
<scroll-view scroll-y type="list">
  <view class="p-2 border m-2 rounded">{{ motto }}</view>
  <view class="bg-[#c50d69] text-[10px] text-[#123456] w-[323px] {{true?'h-[30px]':'h-[45px]'}}">
    bg-[#7d7ac2] text-[10px] text-[#123456] w-[323px]
  </view>
  <view class="p-2 border">{{message}}</view>
  <view wx:for="{{array}}">{{item}}</view>
  <template is="staffName" data="{{...staffA}}"></template>
  <template is="staffName" data="{{...staffB}}"></template>
  <template is="staffName" data="{{...staffC}}"></template>
  <template bindtap="switchTemplate" is="{{flag? 'odd': 'staffName'}}" data="{{...staffC}}"></template>
  <t-divider></t-divider>
  <view class="user-motto text-pink-200 bg-slate-100">{{m1.message}}</view>
  <wxs module="wxs" src="./test.wxs"></wxs>
  <view id="tapTest" data-hi="Weixin" bindtap="{{wxs.tapName}}">Click me!</view>
</scroll-view>
<template name="odd">
  <view>odd</view>
</template>
<template name="even">
  <view>even</view>
</template>
<view class="button-example">
  <t-button bind:tap="switchTemplate" theme="primary" size="large">填充按钮</t-button>
  <t-button bind:click="switchTemplate" theme="light" size="large">填充按钮</t-button>
  <t-button size="large">填充按钮</t-button>
</view>
<block wx:for="{{[1, 2, 3, 4, 5]}}">
  <template is="{{item % 2 == 0 ? 'even' : 'odd'}}" />
</block>
<wxs src="./index.wxs" module="tools" />
<wxs module="m1">
var msg = "hello world";

module.exports.message = msg;
</wxs>"
`;

exports[`wxml > processWxml remove wxs > deps 1`] = `
[
  {
    "attrs": {
      "module": "wxs",
      "src": "./test.wxs",
    },
    "end": 1064,
    "name": "src",
    "quote": """,
    "start": 1048,
    "tagName": "wxs",
    "value": "./test.wxs",
  },
  {
    "attrs": {
      "module": "tools",
      "src": "./index.wxs",
    },
    "end": 1644,
    "name": "src",
    "quote": """,
    "start": 1627,
    "tagName": "wxs",
    "value": "./index.wxs",
  },
]
`;

exports[`wxml > processWxml remove wxs case 0 > code 1`] = `"<wxs src="./index.wxs" module="tools"  />"`;

exports[`wxml > processWxml remove wxs case 0 > deps 1`] = `
[
  {
    "attrs": {
      "lang": "ts",
      "module": "tools",
      "src": "./index.wxs",
    },
    "end": 22,
    "name": "src",
    "quote": """,
    "start": 5,
    "tagName": "wxs",
    "value": "./index.wxs",
  },
]
`;

exports[`wxml > processWxml remove wxs case 1 > code 1`] = `"<wxs src="./index.wxs" module="tools"  />"`;

exports[`wxml > processWxml remove wxs case 1 > deps 1`] = `
[
  {
    "attrs": {
      "lang": "js",
      "module": "tools",
      "src": "./index.wxs.ts",
    },
    "end": 25,
    "name": "src",
    "quote": """,
    "start": 5,
    "tagName": "wxs",
    "value": "./index.wxs.ts",
  },
]
`;

exports[`wxml > processWxml remove wxs case 2 > code 1`] = `"<wxs src="./index.wxs" module="tools" />"`;

exports[`wxml > processWxml remove wxs case 2 > deps 1`] = `
[
  {
    "attrs": {
      "module": "tools",
      "src": "./index.wxs.js",
    },
    "end": 25,
    "name": "src",
    "quote": """,
    "start": 5,
    "tagName": "wxs",
    "value": "./index.wxs.js",
  },
]
`;

exports[`wxml > processWxml remove wxs case 3 > code 1`] = `
"<wxs module="foo">
var some_msg = "hello world";
module.exports = {
  msg : some_msg,
}
</wxs>
<view> {{foo.msg}} </view>"
`;

exports[`wxml > processWxml remove wxs case 3 > deps 1`] = `[]`;

exports[`wxml > processWxml remove wxs case 4 > code 1`] = `
"<wxs module="foo" >
var some_msg = "hello world";
module.exports = {
  msg: some_msg
};
</wxs>
<view> {{foo.msg}} </view>"
`;

exports[`wxml > processWxml remove wxs case 4 > deps 1`] = `[]`;

exports[`wxml > processWxml remove wxs case 5 > code 1`] = `
"<wxs module="foo" >
var some_msg = "hello world";
module.exports = {
  msg: some_msg
};
</wxs>
<view> {{foo.msg}} </view>"
`;

exports[`wxml > processWxml remove wxs case 5 > deps 1`] = `[]`;
